--- a/Login/login.html
+++ b/Login/login.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="content first-content">
             <div class="first-column">
-                <h2 class="title">Bem-vindo de Volta!</h2>
+                <h2 class="title title-primary">Bem-vindo de Volta!</h2>
                 <p class="description">Mantenha-se conectado conosco</p>
                 <p class="description">Por favor conecte-se com suas informações pessoais</p>
-                <button class="btn">Entrar</button>
+                <button class="btn btn-primary">Entrar</button>
             </div>
             <div class="second-column">
                 <h2 class="title">Criar conta</h2>
