--- a/Login/login.html
+++ b/Login/login.html
@@ -14,7 +14,7 @@
                 <h2 class="title title-primary">Bem-vindo de Volta!</h2>
                 <p class="description description-primary">Mantenha-se conectado conosco</p>
                 <p class="description description-primary">Por favor conecte-se com suas informações pessoais</p>
-                <button class="btn btn-primary">Entrar</button>
+                <button id="entrar"class="btn btn-primary">Entrar</button>
             </div>
             <div class="second-column">
                 <h2 class="title title-second">Criar conta</h2>
@@ -52,7 +52,7 @@
                 <h2 class="title title-primary">Olá, Escritor!</h2>
                 <p class="description description-primary">Insira seus dados pessoais aqui</p>
                 <p class="description description-primary">e comece sua jornada conosco</p>
-                <button class="btn btn-primary">Inscreva-se</button>
+                <button id="inscrever"class="btn btn-primary">Inscreva-se</button>
             </div>
             <div class="second-column">
                 <h2 class="title title-second">Login</h2>
@@ -83,6 +83,6 @@
             </div> 
         </div>
     </div>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
