--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <title>Virtual Writing - Perfil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="perfil/style_profile.css  ">
-    <link rel="shortcut icon" href="fotos/logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="perfil/fotos/logo.jpeg" type="image/x-icon">
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #9370DB;">
@@ -58,7 +58,7 @@
         <div class="container-perfil">
             <div class="lado-esquerdo">
                 <div class="format-imagem-perfil">
-                    <img src="fotos/foto 3x4.png" alt="Foto Perfil" class="foto-perfil">
+                    <img src="perfil/fotos/foto 3x4.png" alt="Foto Perfil" class="foto-perfil">
                 </div>
                 <div class="nivel-escritor">
                     <img src="https://cdn-icons-png.flaticon.com/128/7773/7773157.png" alt="Icone Nível"
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="box-infor">
-                    <img src="fotos/a-mar.png" alt="Capa do Livro" class="infor-image">
+                    <img src="perfil/fotos/a-mar.png" alt="Capa do Livro" class="infor-image">
                     <div class="infor-details">
                         <h2 class="infor-title">A-MAR</h2>
                         <p class="infor-descritor">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="box-infor">
-                    <img src="fotos/ficcao.png" alt="Capa do Livro" class="infor-image">
+                    <img src="perfil/fotos/ficcao.png" alt="Capa do Livro" class="infor-image">
                     <div class="infor-details">
                         <h2 class="infor-title">Nas Asas da Imaginação</h2>
                         <p class="infor-descritor">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="box-infor">
-                    <img src="fotos/sorrir.png" alt="Capa do Livro" class="infor-image">
+                    <img src="perfil/fotos/sorrir.png" alt="Capa do Livro" class="infor-image">
                     <div class="infor-details">
                         <h2 class="infor-title">Como é bom sorrir</h2>
                         <p class="infor-descritor">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="box-infor">
-                    <img src="fotos/ultima_chance.png" alt="Capa do Livro" class="infor-image">
+                    <img src="perfil/fotos/ultima_chance.png" alt="Capa do Livro" class="infor-image">
                     <div class="infor-details">
                         <h2 class="infor-title">A Última Chance</h2>
                         <p class="infor-descritor">
